methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:6: error: Unmatched closing brace '}' ignored here
       }
       ^